feat(watchtime): add watchtime and views
